--- a/phishing/index.html
+++ b/phishing/index.html
@@ -7,7 +7,7 @@
   <!-- This is the way to add your own topic specific styles (no need to change the styles_home file)-->
   <link rel="stylesheet" href="../styles/styles_example.css">
   <style>
-    body{background-color: #9F81F7;}
+    body{background-color:#A9F5F2 ;}
     </head>
   <body>
      
