--- a/phishing/index.html
+++ b/phishing/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="../styles/styles_example.css">
   <style>
     body{background-color:#A9F5F2 ;}
-    </head>
+  </style>
+   </head>
   <body>
      
   
