--- a/phishing/index.html
+++ b/phishing/index.html
@@ -48,21 +48,21 @@
     <h1><span style="color:red">WARNING</h1>
     <p><span style="color:red">Beware of links in email, threats, bad spelling and bad grammar, spoofing  popular websites, if they do not address you, domain emails, gaining and misusing your trust. </p>
     <h2>History</h2>
-    <p>1987 -WAS DESCRIBED IN A DETAILED PAPER AND PRESENTATION DELIVERY. (TO THE 1987 VERSION OF "HP")</p>
+    <p>1987 -Was described in a detailed paper presentation delivery. (to the 1987 version of "HP")</p>
 
-    <p>1990 -PHISHING IS SAID TO HAVE BEEN COINED BY THE WELL-KNOWN SPAMMER AND HACKER, KHAN C. SMITH. THE TERM IS FOUND IN THE HACKING TOOL, AOHELL.</p>
+    <p>1990 -Phishing is said to have been coined by the well-known spammer and hacker, Khan C. Smith. The term is found in the hacking tool, Aohell.</p>
 
-    <p>2001 -THE FIRST DIRECT ATTEMPT AGAISNT A PAYMENT SYSTEM AFFECTED THE E-GOLD IN JUNE.</p>
+    <p>2001 -The first direct attempt against a payment system affected the E-Gold in June.</p>
 
-    <p>2003 -THE FIRST AGAINST A RETAIL BANK WAS IN SEPTEMBER. </p>
+    <p>2003 -The first against a retail bank was in September.</p>
 
-    <p>2007 -3.6 MILLION ADULTS LOST 3.2 BILLION DOLLARS IN THE 12 MONTHS ENDING IN AUGUST. </p>
+    <p>2007 -3.6 million adults lost 3.2 billion dollars in the 12 months ending in August.</p>
 
-    <p>2011 -110 MILLION COSTUMER AND CREDIT CARD RECORDS WERE STOLEN FROM TARGET CLIENTS. </p>
+    <p>2011 -110 million costumer and credit card records were stolen from target clients.</p>
 
-    <p>2015 -CHARLES ECCLESTEN ATTEMPTED TO INFECT 80 COMPUTERS. </p>
+    <p>2015 -Charles Ecclesten attempted to infect 80 computers.</p>
 
-<p>2016 -WITHIN HOURS THE 2016 US ELECTION RESULTS, RUSSIAN HACKERS SENT EMAILS FROM HARVARD UNI AND THEY USED PHISHING TO PUBLISH FAKE NEWS TARGETED AT AMERICAN VOTERS. </p>
+<p>2016 -Within hours the 2016 US election results, Russian hackers sent emails from Harvard Uni and they used Phishing to publish fake news targeted at American voters. </p>
 
     <h1> Phishing attacks in a year </h1>
     <p>2005:173063</p>
