--- a/Virus/index.html
+++ b/Virus/index.html
@@ -31,7 +31,7 @@
 <p> </p>
 <p> </p>
 
-<h2> <b> <a href= "../virus/page_one.html"> Start the presentation </a> </b> </h2>
+<h2> <b> <a href= "IAS2018/virus/page_one.html"> Start the presentation </a> </b> </h2>
 
 <p> </p>
 <p> </p>
