--- a/Virus/Main.html
+++ b/Virus/Main.html
@@ -31,7 +31,7 @@
 <p> </p>
 <p> </p>
 
-<h2> <b> <a href= "../Virus/page_one.html"> Start the presentation </a> </b> </h2>
+<h2> <b> <a href= "../Virus/page_one"> Start the presentation </a> </b> </h2>
 
 <p> </p>
 <p> </p>
