edited some text into lowercase

--- a/phishing/index.html
+++ b/phishing/index.html
@@ -32,17 +32,17 @@
     <p> Deceptive phishing, Spear phishing, CEO fraud, Pharming, Dropbox phishing and Google Docs phishing. </p>
     <h2>Furthermore...</h2>
     <p>
-      DP: TRICK YOU INTO PROVIDING DETAILS THAT THEY NEED TO ACCESS YOUR BACK ACCOUNT BY IMPERSONATING LEGITIMATE COMPANIES. </p>
+      DP: Trick you into providing details thattheyneed to access your backaccount by impersonating legitamate companies. </p>
 
 <p>SP: DIRECTLY TARGET YOU TO ACQUIRE YOUR BANKING DETAILS OR OTHER DATA BY CUSTOMIZING THEIR ATTACK EMAILS WITH DETAILS.</p>
 
-    <p>CF: TRANSFER MONEY DIRECTLY INTO THE CYBERCRIMINALS EMAILS BY IMPERSONATING EXECUTIVES. </p>
+    <p>CF:Transfer money directley into the cybercriminals emails byimpersonating executives. </p>
 
-<p>PH: TO INTERCEPT AND STEAL ONLINE PAYMENTS BY CHANGING THE IP ADDRESS ACCOCIATED WITH ALPHABETICAL WEBSITE NAMES. </p>
+<p>PH: TO INTERCEPT AND STEAL ONLINE PAYMENTS BY CHANGING THE IP ADDRESS ACCOCIATED WITH ALPHABETICAL WEBSITE NAMES  </p>
 
     <p>DRP: TO INSTALL MALWARE ON THE VICTIM'S COMPUTER BY TARGETING USERS WITH PHISHING EMAILS. </p>
 
-<p>GDP: TO ACCESS YOUR GOOGLE ACCOUNT INCUDING: G-MAIL, GOOGLEPLAY AND ANDROID APPLICTIONS BY CREATING A WEBPAGE THAT MIMICS THE GOOGLE ACCOUNT LOGIN SCREEN AND HARVESTS USERS CREDENTIALS.
+<p>GDP: To access your Google account including:G-Mail, Googleplay and Android application by creating a webpagethat mimics the Google account login screen and harvestsusers credentials.
     </p>
 
     <h1><span style="color:red">WARNING</h1>
