--- a/phishing/index.html
+++ b/phishing/index.html
@@ -32,11 +32,11 @@
     <p> Deceptive phishing, Spear phishing, CEO fraud, Pharming, Dropbox phishing and Google Docs phishing. </p>
     <h2>Furthermore...</h2>
     <p>
-      DP: Trick you into providing details thattheyneed to access your backaccount by impersonating legitamate companies. </p>
+      DP: Trick you into providing details that they need to access your bank account by impersonating legitamate companies. </p>
 
 <p>SP: DIRECTLY TARGET YOU TO ACQUIRE YOUR BANKING DETAILS OR OTHER DATA BY CUSTOMIZING THEIR ATTACK EMAILS WITH DETAILS.</p>
 
-    <p>CF:Transfer money directley into the cybercriminals emails byimpersonating executives. </p>
+    <p>CF:Transfer money directley into the cybercriminals emails by impersonating executives. </p>
 
 <p>PH: TO INTERCEPT AND STEAL ONLINE PAYMENTS BY CHANGING THE IP ADDRESS ACCOCIATED WITH ALPHABETICAL WEBSITE NAMES  </p>
 
