--- a/phishing/index.html
+++ b/phishing/index.html
@@ -32,18 +32,17 @@
     <p> Deceptive phishing, Spear phishing, CEO fraud, Pharming, Dropbox phishing and Google Docs phishing. </p>
     <h2>Furthermore...</h2>
     <p>
-      DP: Trick you into providing details that they need to access your bank account by impersonating legitamate companies. </p>
+      DP: Trick you into providing details thattheyneed to access your backaccount by impersonating legitamate companies. </p>
 
-<p>SP: DIRECTLY TARGET YOU TO ACQUIRE YOUR BANKING DETAILS OR OTHER DATA BY CUSTOMIZING THEIR ATTACK EMAILS WITH DETAILS.</p>
+<p>SP: Directly target you to aquire your banking details or other data by customising
 
-    <p>CF:Transfer money directley into the cybercriminals emails by impersonating executives. </p>
+    <p>CF:Transfer money directley into the cybercriminals emails byimpersonating executives. </p>
 
-<p>PH: TO INTERCEPT AND STEAL ONLINE PAYMENTS BY CHANGING THE IP ADDRESS ACCOCIATED WITH ALPHABETICAL WEBSITE NAMES  </p>
+<p>PH: To intercept and steal online payments by changing the IP address associated with alphabetical website names  </p>
 
-    <p>DRP: TO INSTALL MALWARE ON THE VICTIM'S COMPUTER BY TARGETING USERS WITH PHISHING EMAILS. </p>
+    <p>DRP:To install malware on the victims computer by targeting users with phishing emails.  </p>
 
-<p>GDP: To access your Google account including:G-Mail, Googleplay and Android application by creating a webpagethat mimics the Google account login screen and harvestsusers credentials.
-    </p>
+<p>GDP: To access your Google account including:G-Mail, Googleplay and Android application by creating a webpagethat mimics the Google account login screen and harvests users credentials  </p>
 
     <h1><span style="color:red">WARNING</h1>
     <p><span style="color:red">Beware of links in email, threats, bad spelling and bad grammar, spoofing  popular websites, if they do not address you, domain emails, gaining and misusing your trust. </p>
