--- a/1Virus/main.html
+++ b/1Virus/main.html
@@ -31,7 +31,7 @@
 <p> </p>
 <p> </p>
 
-<h2> <b> <a href= "IAS2018/1malakamrVirus/page_one"> Start the presentation </a> </b> </h2>
+<h2> <b> <a href="page_one"> Start the presentation </a> </b> </h2>
 
 <p> </p>
 <p> </p>
