--- a/1Virus/page_one.html
+++ b/1Virus/page_one.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<b> <a href="IAS2018/Virus/Main.html">Back</a> </b>
+<b> <a href="index.html">Back</a> </b>
 
 <h1> What is a computer virus? </h1>
 
@@ -45,7 +45,7 @@
 <p> </p>
 <p> </p>
 <p> </p>
-<a href="IAS2018/Virus/Main.html" > Home </a>
+<a href="index.html" > Home </a>
 <p> </p>
 <p> </p>
 <p> </p>
