--- a/1Virus/page_one.html
+++ b/1Virus/page_one.html
@@ -29,7 +29,7 @@
 <p> </p>
 <p> </p>
 <p> </p>
-<a href="types_of_hackers.html" > Types of hackers  </a>
+<a href="types_of-hackers.html" > Types of hackers  </a>
 <p> </p>
 <p> </p>
 <p> </p>
