--- a/1Virus/page_one.html
+++ b/1Virus/page_one.html
@@ -25,7 +25,7 @@
 <p> </p>
 <p> </p>
 <p> </p>
-<a href="types_viruses.html" > Types of computer viruses </a>
+<a href="types_of_viruses.html" > Types of computer viruses </a>
 <p> </p>
 <p> </p>
 <p> </p>
