--- a/1Virus/types_of-hackers.html
+++ b/1Virus/types_of-hackers.html
@@ -23,11 +23,11 @@
 <p> </p>
 <p> </p>
 <p> </p>
-<a href="types_viruses.html" > Types of computer viruses </a>
+<a href="types_of_viruses.html" > Types of computer viruses </a>
 <p> </p>
 <p> </p>
 <p> </p>
-<a href="types_of_hackers.html" > Types of hackers  </a>
+<a href="types_of-hackers.html" > Types of hackers  </a>
 <p> </p>
 <p> </p>
 <p> </p>
